# exrs

./: .gitattributes  .gitignore  .output.txt  AUDIT.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  DEEP_DATA_PLAN.md  DWA-STATE.md  DWA_REFACTOR_PLAN.md  GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE.md  PERFORMANCE-ANALYSIS.md  README.md  TOOD.md  Todo.md  UNWRAP_AUDIT.md  baseline_bench_results.txt  releasing.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
benches/: benches.rs  csc.rs  dct.rs  idct.rs  pixel_format_conversion.rs  profiling.rs  read.rs  read_parallel_file_handles.rs  rgba.rs  write.rs
ci/: Cross.avx2.toml  Cross.sse2.toml
examples/: 0_minimal_rgb.rs  0_minimal_rgb_read.rs  0_minimal_rgb_write.rs  0_read_meta.rs  0a_write_rgba.rs  0b_read_meta.rs  0c_read_rgba.rs  0c_read_rgba_fully_parallel.rs  1_generate_rgba.rs  1_minimal_rgb.rs  1_rgb_exr_to_png.rs  1a_write_rgba_with_metadata.rs  1b_convert_exr_to_png.rs  2_rgba_adjust_exposure.rs  2_rgba_exposure_adjust.rs  3_simple_write.rs  3_write_dynamic_channels_with_metadata.rs  (+47 more)
exrs-wasm/: Cargo.toml  README.md
exrs-wasm/examples/: index.html
exrs-wasm/examples/typescript-vite/: README.md  package-lock.json  package.json
exrs-wasm/js/: README.md  index.d.ts  index.js  index.ts  package-lock.json  package.json  tests.test.ts
exrs-wasm/src/: lib.rs
exrs-wasm/tests/: web.rs
exrs-wasm/tests-js/: package.json  test.js
lib/exrs/: Cargo.toml
lib/exrs/benches/: pixel_format_conversion.rs  read.rs  write.rs
lib/exrs/src/: math.rs
lib/exrs/src/block/: lines.rs  mod.rs  reader.rs  samples.rs
lib/exrs/src/compression/: pxr24.rs  rle.rs
lib/exrs/src/compression/b44/: mod.rs
lib/exrs/src/compression/piz/: huffman.rs  mod.rs
lib/exrs/src/image/: channel_groups.rs  crop.rs  mod.rs  recursive.rs
lib/exrs/src/image/read/: any_channels.rs  layers.rs  mod.rs  samples.rs
lib/exrs/src/image/write/: samples.rs
lib/exrs/src/meta/: attribute.rs
lib/exrs/tests/: fuzz.rs
lib/exrs/tests/images/fuzzed/: b44_overly_restrictive_assert.exr  piz_short_code_subtract_with_overflow.exr  zero-tilesize.exr
lib/exrs/tests/images/invalid/openexr/Damaged/: README.md  asan_heap-oob_4cb169_255_cc7ac9cde4b8634b31cb41c8fe89b92d_exr  asan_heap-oob_4cb169_380_4572f174dd4e48b879ca6d516486f30e_exr  asan_heap-oob_7f09128c0ec1_358_ecaca7fb3f230d9d842074e1dd88f29b_exr  asan_heap-oob_7f0faa6bb393_900_7d9ed0a6eaa68f8308a042d725119ad2_exr  asan_heap-oob_7f11c0330393_935_240e7cacd61711daf4285366fea95e0c_exr  asan_heap-oob_7f171b7ab3a2_937_b4e2415c399c2ab39548de911223769d_exr  asan_heap-oob_7f178ac80539_109_519f88e9ededfff61f535d6c9eb25a85_exr  asan_heap-oob_7f35311a1426_780_4871d40882e0fe7fae1427a82319e144_exr  asan_heap-oob_7f479f9536bd_391_5953693841a7931caf3d4592f8b9c90b_exr  asan_heap-oob_7f4aaebde389_918_a40f029a8121e5e26fe338b1fb91846e_exr  asan_heap-oob_7f58e8d75e8b_186_4bb7b1de93e9e44ea921c301b29a8026_exr  asan_heap-oob_7f5a5030cdca_702_045a76649e773c9c18b706c9853f18d9_exr  asan_heap-oob_7f5c18182f27_369_1fb4dae7654c77cd79646d3aa049d5dd_exr  asan_heap-oob_7f5cdab9a3a7_415_c33b838f08aafc976d3c24139936e122_exr  asan_heap-oob_7f6798416389_229_18bd946a4fde157b9974d16a51a4851d_exr  asan_heap-oob_7f6a78657cbf_916_10cc35387b54fdc7744f91b5bb424009_exr  asan_heap-oob_7f6e5e983398_203_ff7c0c73c79483db1fee001d77463c37_exr  asan_heap-oob_7f6f881fa398_561_20ecb7f5a431d03a1502c28cab1214ad_exr  asan_heap-oob_7f76b2c2cefb_196_ea4f8db8b4f2c11e02428c08e9bbbbb8_exr  asan_heap-oob_7f7a75f9abf5_577_a2b8668cc6069643543cb80fedca3ee4_exr  asan_heap-oob_7f8170c1abfa_115_8c6e33969541bf432ef7e68cc369728c_exr  asan_heap-oob_7f8a69d8339d_829_381ccc69dc6bd21c43a1deb0965bf5ab_exr  asan_heap-oob_7f8ed39ceed3_955_c6bb655a1bbfab9c5b511bd2b767e023_exr  asan_heap-oob_7f9acb068ee5_177_ec645ad270202d39ba5e80c826bbf13d_exr  asan_heap-oob_7fa0e1f48cbf_760_be9901248390240a24449d4e8a97f6f2_exr  asan_heap-oob_7fa34eacd389_820_476a8109ebb3f7d02252e773b7bca45d_exr  asan_heap-oob_7faf9aba03ac_414_75af58c21b9b9e994747f9d6a5fc46d4_exr  asan_heap-oob_7fb3a7c6fc99_871_52d1f03c515bc91cc894515beea56a4f_exr  asan_heap-oob_7fb97d097381_293_78e73b6494a955e87faabcb16b35faa0_exr  asan_heap-oob_7fbe2d8e838e_932_9e9d2b0a870c0ad516189d274c2f98e4_exr  asan_heap-oob_7fc6b05f1eaf_255_e967badfa747d1bb0eda71a1883b419e_exr  asan_heap-oob_7fca10855564_529_6d418eae3e33a819185a8b09c40fd123_exr  asan_heap-oob_7fcdcb0a9f65_100_70d0d5b98567a5174d512dba7a603377_exr  asan_heap-oob_7fce901e7498_737_927b67c9a1ecd5f997d3a2620fdbf639_exr  asan_heap-oob_7fd328d0d206_535_9cc3d65c368fb138cb6a4bdd4da8070f_exr  asan_heap-oob_7fd921b41f11_369_da245dc772c0a5a60ce7b759b2132c51_exr  asan_heap-oob_7fe4c4caa975_277_153f78ec07237d01e8902143da28c7ec_exr  asan_stack-oob_433d4f_436_bb29e6f88ad5f5b2f5f9b68a3655b1d8_exr  asan_stack-oob_433d4f_510_f8d3ef49bd6e5f7ca4fb7e0f9c0af139_exr  (+13 more)
lib/exrs/tests/images/valid/custom/: LICENSE
lib/exrs/tests/images/valid/custom/compression_methods/: README.md
lib/exrs/tests/images/valid/custom/compression_methods/f16/: b44.exr  b44a.exr  decompressed_b44.exr  decompressed_dwaa.exr  decompressed_dwab.exr  dwab.exr  uncompressed.exr  zip.exr  zips.exr
lib/exrs/tests/images/valid/custom/compression_methods/f32/: b44.exr  b44a.exr  decompressed_dwaa.exr  decompressed_dwab.exr  piz.exr  pxr24.exr  rle.exr  uncompressed.exr  zip.exr  zips.exr
lib/exrs/tests/images/valid/custom/compression_methods/u16/: f16_piz.exr  f16_uncompressed.exr  f32_dwaa.exr  f32_piz.exr  f32_pxr24.exr
lib/exrs/tests/images/valid/custom/crowskull/: README.md  crow_dwa.exr  crow_pxr24.exr  crow_zip_half.exr
lib/exrs/tests/images/valid/openexr/Beachball/: README.odt  multipart.0003.exr  multipart.0004.exr  multipart.0005.exr  multipart.0006.exr  multipart.0007.exr  multipart.0008.exr  singlepart.0001.exr  singlepart.0004.exr  singlepart.0005.exr  singlepart.0006.exr  singlepart.0008.exr
lib/exrs/tests/images/valid/openexr/v2/: README.md
lib/exrs/tests/images/valid/openexr/v2/LeftView/: Trunks.exr
lib/exrs/tests/images/valid/openexr/v2/LowResLeftView/: Balls.exr
(+425 files in other folders)
