[workspace]
resolver = "3"
members = ["lib/exrs", "lib/exrs-wasm"]

# recommended release settings for max runtime performance
[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1

# test with fast runtime speed and slow build speed
[profile.dev]
incremental = true
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true
lto = true

# test with fast runtime speed and moderate build speed
[profile.test]
incremental = true
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true
lto = true

# bench with fastest runtime speed
[profile.bench]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
debug = true
codegen-units = 1

# NOTE: When using per-package profile some keys (like `lto`) are currently not supported inside workspaces, see:
# - https://github.com/rust-lang/cargo/issues/15262
# - https://github.com/rust-lang/cargo/issues/8264#issuecomment-635424772
[profile.release.package.exrs-raw-wasm-bindgen]
opt-level = "s"
# lto = true
