[package]
name = "exrs_lib"
version = "1.74.0"
edition = "2018"

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false

[features]
default = ["rayon"]

# rayon is used for parallel compression
rayon = ["dep:rayon-core"]

[dependencies]
lebe = "^0.5.2"                # generic binary serialization
half = "2.1.0"                 # 16 bit float pixel data type
bit_field = "^0.10.1"          # exr file version bit flags
miniz_oxide = "^0.8.0"         # zip compression for pxr24
smallvec = "^1.7.0"            # make cache-friendly allocations        TODO profile if smallvec is really an improvement!
rayon-core = { version = "^1.11.0", optional = true }         # threading for parallel compression
zune-inflate = { version = "^0.2.3", default-features = false, features = ["zlib"] }  # zip decompression, faster than miniz_oxide

[dev-dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"] }         # used to convert one exr to some pngs

bencher = "0.1.5"
walkdir = "2.3.2"         # automatically test things for all files in a directory
rand = "0.8.5"            # used for fuzz testing
rayon = "1.5.3"           # run tests for many files in parallel
